fixed misaligned bullets in blog

--- a/css/main.css
+++ b/css/main.css
@@ -689,6 +689,9 @@ table{
 .post pre.terminal code {
   background-color: #333;
 }
+.ListPosts ul{
+  margin-left: 15px;
+}
 
 .ListPosts {
   text-align: justify;
@@ -696,9 +699,8 @@ table{
   margin-left: auto;
   margin-right: auto;
   color: #333333;
-
-
 }
+
 
 .blog {
   width:900px;
